# aoc-2020

./: .gitignore  LICENSE.txt  Makefile  README.md  aoc2020.cabal  createday.sh
01/: Main.hs
02/: Main.hs
03/: Main.hs
04/: Main.hs
src/03/: Main.hs
src/05/: Main.hs
src/06/: Main.hs
src/07/: Main.hs
src/08/: Main.hs
src/09/: Main.hs
src/10/: Main.hs
