cabal-version:      2.4
name:               aoc2020
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: solutions to the Advent of Code 2020 in Haskell

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            MIT
author:             Tamer Aly
maintainer:         taly.dev75@gmail.com

-- A copyright notice.
copyright: Tamer Aly (C) 2021
-- category:
extra-source-files:

executable aoc2020-1
    main-is:        Main.hs
    
    build-depends:    base ^>=4.14.1.0
    hs-source-dirs:   src/01
    default-language: Haskell2010

executable aoc2020-2
    main-is:        Main.hs
    
    build-depends:    base ^>=4.14.1.0
    hs-source-dirs:   src/02
    default-language: Haskell2010

executable aoc2020-3
    main-is:        Main.hs
    
    build-depends:    base ^>=4.14.1.0
    hs-source-dirs:   src/03
    default-language: Haskell2010

executable aoc2020-4
    main-is:        Main.hs
    
    build-depends:    base ^>=4.14.1.0
    hs-source-dirs:   src/04
    default-language: Haskell2010

executable aoc2020-5
    main-is:        Main.hs
    
    build-depends:    base ^>=4.14.1.0
    hs-source-dirs:   src/05
    default-language: Haskell2010

executable aoc2020-6
    main-is:        Main.hs
    
    build-depends:    base ^>=4.14.1.0
    hs-source-dirs:   src/06
    default-language: Haskell2010

executable aoc2020-7
    main-is:        Main.hs
    
    build-depends:    base ^>=4.14.1.0
    hs-source-dirs:   src/07
    default-language: Haskell2010


